Navigation: Prevent navbar from breaking on small screens

--- a/resources/css/src/_navigation.less
+++ b/resources/css/src/_navigation.less
@@ -4,7 +4,7 @@
 .logo {
   background-image: url('../images/tei-publisher-logo-contrast-color.svg');
   background-repeat: no-repeat;
-  padding-left: 220px;
+  padding-left: 140px;
 
   @media (max-width: 1199px) {
     background-position: 5px 5px;
